<resources>
    <string name="app_name">방산물자관리</string>
    <string name="inputid">아이디</string>
    <string name="inputpw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="findidpw">아이디/비밀번호 찾기</string>
    <string name="singup">회원가입</string>
    <string name="signupinfo">관리자 승인 시 로그인 가능합니다.</string>
    <string name="inputnum">소속번호</string>
    <string name="inputname">이름</string>
    <string name="checkpw">비밀번호 확인</string>
    <string name="findaccount">계정찾기</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="findid">아이디 찾기</string>
    <string name="find">찾기</string>
    <string name="manage">자재관리</string>
    <string name="teamname">소속명</string>
    <string name="add_some">품목 추가</string>
    <string name="objectname">품목명</string>
    <string name="title_activity_permission_dialog">PermissionDialog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="require_permission">관리자 승인이 필요합니다.</string>
    <string name="ok">확인</string>
    <string name="ex_team">1중대 1소대</string>
    <string name="ex_obje">자재명1</string>
    <string name="ex_teamname">1중대 1소대 홍길동</string>
    <string name="status">불출</string>
    <string name="date">22.08.08</string>
    <string name="issue">특이사항 없음</string>
    <string name="inputobjectname">자재명을 입력해주세요.</string>
    <string name="object_name">자재명</string>
    <string name="tag_info">TAG 정보</string>
    <string name="inputtaginfo">태그정보를 입력해주세요.</string>
    <string name="issue_">특이사항</string>
    <string name="inputissue">특이사항을 입력해주세요.</string>
    <string name="disposal">폐기처분</string>
    <string name="retouch">수정</string>
    <string name="cancel">취소</string>
    <string name="inputobjename">품목명을 입력해주세요.</string>
    <string name="regist">등록</string>
    <string name="tag_info_eng">TAG Info</string>
    <string name="nfc_content">스마트폰의 NFC 기능을 켜고\n스티커에 기기를 접근시켜주세요.</string>
    <string name="nfc_info">NFC 기능을 스티커에 태그해주세요.</string>
    <string name="return_">반납하기</string>
    <string name="move">불출하기</string>
    <string name="move_info">불출 정보</string>
    <string name="squadron">중대</string>
    <string name="platoon">소대</string>
    <string name="inputname_">이름을 입력해주세요.</string>
    <string name="inputcontext">내용을 입력해주세요.</string>
    <string name="etc">기타</string>
    <string name="name_object">자재 이름</string>
    <string name="addproduct">자재 추가</string>
    <string name="selectimg">품목 이미지\n선택</string>
    <string name="item1">수류탄1</string>
    <string name="back">back</string>
    <string name="productimg">productimg</string>
    <string name="logo">logo</string>
    <string name="photoshoot">사진 촬영</string>
    <string name="gallery">갤러리에서 가져오기</string>
    <string name="selectimgg">이미지 선택</string>
</resources>