<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/subcolor">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_previous"
                android:padding="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/add_materail_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addproduct"
                android:textColor="@color/pointcolor"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ob_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/object_name_txv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/object_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/input_obname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_rect_01"
                    android:hint="@string/inputobjectname"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tag_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tag_txv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:text="@string/tag_info_eng"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <EditText
                    android:id="@+id/input_tag_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:hint="@string/inputtaginfo"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_11sdp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:background="@drawable/bg_rect_01"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/issue_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:id="@+id/issue_txv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:text="@string/issue_"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <EditText
                    android:id="@+id/input_issue_edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:hint="@string/inputissue"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_11sdp"
                    android:importantForAutofill="no"
                    android:gravity="left"
                    android:inputType="text"
                    android:background="@drawable/bg_rect_01"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <Button
                android:id="@+id/regist_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_01"
                android:padding="@dimen/_13sdp"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </RelativeLayout>
    </LinearLayout>
</layout>