<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_20sdp">

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rect_01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_3sdp"
            android:background="@color/pointcolor2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_weight="10">

            <TextView
                android:id="@+id/object_name_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/ex_obje"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/status_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="3"
                android:background="@drawable/bg_rounded_05"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/status"
                android:textColor="@color/pointcolor2" />
        </LinearLayout>

        <TextView
            android:id="@+id/team_person_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/ex_teamname"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/date"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_rect_01">

            <TextView
                android:id="@+id/issue_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:text="@string/issue"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>