<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.RetouchMaterialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/subcolor">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_previous"
                android:padding="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/exobje_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_obje"
                android:textColor="@color/pointcolor"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ob_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/obname_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:text="@string/object_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"
                android:layout_marginTop="@dimen/_10sdp"/>


            <EditText
                android:id="@+id/input_obname_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:hint="@string/inputobjectname"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11sdp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:background="@drawable/bg_rect_01"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tag_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:text="@string/tag_info"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/input_tag_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:hint="@string/inputtaginfo"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11sdp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:background="@drawable/bg_rect_01"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/issue_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/issue_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:text="@string/issue_"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/input_issue_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:hint="@string/inputissue"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_11sdp"
                android:importantForAutofill="no"
                android:gravity="left"
                android:inputType="text"
                android:background="@drawable/bg_rect_01"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/disposal"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/bg_rounded_02"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_check" />

                <TextView
                    android:id="@+id/info_txv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="자재명1은 현재 불출상태입니다."
                    android:textColor="@color/pointcolor"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>
            <Button
                android:id="@+id/retouch_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_01"
                android:padding="@dimen/_13sdp"
                android:text="@string/retouch"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>
</layout>