<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/subcolor">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_previous"
                android:padding="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/add_materail_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_some"
                android:textColor="@color/pointcolor"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rect_01"
                android:paddingVertical="@dimen/_5sdp"
                app:tabIndicatorColor="@color/trans"
                app:tabSelectedTextColor="@color/pointcolor"
                app:tabTextColor="@color/textcolor2" />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:background="@color/textcolor2" />
        </RelativeLayout>-->
        <!--<androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/profile_img_btn"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_circle_01"
                    android:contentDescription="@string/productimg"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_camera2" />

                <TextView
                    android:id="@+id/img_select_txv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/selectimg"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ob_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/object_name_txv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/objectname"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


                <EditText
                    android:id="@+id/input_obname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_rect_01"
                    android:hint="@string/inputobjename"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <Button
                android:id="@+id/regist_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_01"
                android:padding="@dimen/_13sdp"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </RelativeLayout>

    </LinearLayout>
</layout>